# 7542-Taller1

./: .gitignore  .gitmodules
TP0/: Makefile  README.md  header.tex  main.c
TP1/: CMakeLists.txt  Makefile  README.md  SercomMakefile  cell.c  cell.h  client.c  header.tex  main.c  protocol.c  protocol.h  server.c  server.h  socket.c  strutil.c  sudoku.c  sudoku.h  sudoku_dispatcher.c  sudoku_dispatcher.h  sudoku_tests.c
TP1/aux/: strutil.c  strutil.h
TP1/diagrams/: client.puml  server.puml  skel.puml
TP1/network/: client.c  client.h  debug.h  protocol.c  protocol.h  server.c  server.h  socket.c  socket.h  sudoku_dispatcher.c  sudoku_dispatcher.h  tests.c
TP1/resources/: board.txt
TP1/sudoku/: 2d_array.c  2d_array.h  board.c  board.h  cell.c  cell.h  sudoku.c  sudoku.h  sudoku_tests.c  tests.c
TP2/: Block.cpp  Block.h  CMakeLists.txt  CompressedBlock.cpp  CompressedBlock.h  InputMonitor.cpp  InputMonitor.h  Master.cpp  Master.h  Minion.cpp  Minion.h  README.md  StreamHandler.cpp  StreamHandler.h  Thread.cpp  Thread.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  Writer.cpp  Writer.h  header.tex  main.cpp  tests.sh
TP2/diagrams/: skel.puml
TP2/input/: alot  largenum  oneblk  pad  zeroblk
TP2/output/: alot4.out  largenum4.out  oneblk4.out  pad8.out  zeroblk3.out
TP3/: CMakeLists.txt  README.md  SercomMakefile  client_Client.cpp  client_Client.h  client_ServerProxy.cpp  client_ServerProxy.h  client_main.cpp  common_CommunicationProtocol.cpp  common_CommunicationProtocol.h  common_Socket.cpp  common_Socket.h  common_Thread.cpp  common_main.cpp  config.cfg  header.tex  server_ClientListener.cpp  server_ClientListener.h  server_ClientProxy.cpp  server_ClientProxy.h  server_ClientTalker.cpp  server_ClientTalker.h  server_Command.cpp  server_Command.h  server_CommandHelp.cpp  server_CommandHelp.h  server_CommandListDirs.cpp  server_CommandListDirs.h  server_CommandMakeDir.cpp  server_CommandMakeDir.h  server_CommandPassword.cpp  server_CommandPassword.h  server_CommandQuit.cpp  server_CommandQuit.h  server_CommandRemoveDir.cpp  server_CommandRemoveDir.h  server_CommandSystemInfo.cpp  server_CommandSystemInfo.h  server_CommandUnknown.cpp  server_CommandUnknown.h  (+13 more)
TP3/diagrams/: server.puml
